--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.6.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
     "framer-motion": "^10.16.4",
     "link-preview-js": "^3.0.5",
     "next": "14.0.0",
